# voxelshift

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: coverage.yml  release.yml
resources/: __init__.py  blender_manifest.toml
src/: App.edge.test.tsx  App.test.tsx  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  planner.rs
src/components/: AppUpdateToast.test.tsx  AppUpdateToast.tsx  BlenderLogsDialog.test.tsx  BlenderLogsDialog.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  PlannerLogsDialog.test.tsx  PlannerLogsDialog.tsx  Tooltip.tsx
src/components/layout/: AppFooter.tsx  AppLayout.test.tsx  AppLayout.tsx  AppMenu.test.tsx  AppMenu.tsx  RunningBlenderTray.test.tsx  RunningBlenderTray.tsx
src/components/releases/: ReleaseConfigDialog.test.tsx  ReleaseConfigDialog.tsx  ReleaseRow.test.tsx  ReleaseRow.tsx
src/data/: homeContent.test.ts  homeContent.ts
src/lib/: api.planner.test.ts  api.test.ts  api.ts  blenderVersions.test.ts  blenderVersions.ts  updater.test.ts  updater.ts
src/pages/: HomePage.test.tsx  HomePage.tsx  PlannerPage.test.tsx  PlannerPage.tsx  ReleasesPage.test.tsx  ReleasesPage.tsx
