[package]
name = "voxel-shift"
version = "0.1.0"
description = "Voxel Shift desktop launcher"
authors = ["CGSeb"]
edition = "2021"

[lib]
name = "voxel_shift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.3.1", features = [] }
