[package]
name = "voxel-shift"
version = "1.2.0"
description = "Voxel Shift desktop launcher"
authors = ["CGSeb"]
edition = "2021"

[lib]
name = "voxel_shift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
futures-util = "0.3.31"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.3.1", features = ["protocol-asset"] }
tauri-plugin-updater = "2"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }





